fixed spacing issues on Homepage

--- a/css/index.css
+++ b/css/index.css
@@ -505,13 +505,12 @@ header .header {
 }
 #__payapi-features {
   width: 100%;
-  height: 182.9rem;
+  height: 173.3rem;
   display: grid;
   grid-template-rows: 3fr 4fr 2fr 1fr;
   align-items: center;
   justify-content: center;
   padding-top: 15rem;
-  padding-bottom: 9.6rem;
   background-image: url("/assets/shared/desktop/bg-pattern-circle.svg");
   background-repeat: no-repeat;
   background-position: 1050px 400px;
